# bridge-module-ui

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/ui/: basic_inputs.py  custom_table_editor.py  db.py  main_window.py  modify_geometry_dialog.py
