[project]
name = "ui-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "pandas>=2.3.3",
    "pdf2docx>=0.5.8",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pyinstaller>=6.16.0",
    "pyside6>=6.10.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "tabula-py>=2.10.0",
    "thefuzz>=0.22.1",
]
